# Team06_DES_Instrument-Cluster

./: .gitignore  LICENSE  README.md  codecov.yml
.github/workflows/: build.yml  build.yml.old  ci-cd.yml  test.yml  test.yml.old
ClusterDisplay/: .clang-format  .gitignore  CMakeLists.txt  ClusterModel.moc  README_IMPROVEMENTS.md  format.sh  main.cpp  main.qml  qml.qrc  tidy.sh
ClusterDisplay/build_tidy/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
ClusterDisplay/build_tidy/.qt/: QtDeploySupport.cmake
ClusterDisplay/build_tidy/.qt/deploy_qml_imports/: ClusterDisplay.cmake
ClusterDisplay/build_tidy/.qt_plugins/: Qt6_QmlPlugins_Imports_ClusterDisplay.rsp
ClusterDisplay/build_tidy/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ClusterDisplay/build_tidy/tests/unit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ClusterDisplay/inc/: BatteryIconObj.hpp  ClusterDataSubscriber.hpp  ClusterModel.hpp  SpeedometerObj.hpp  ZmqMessageParser.hpp  ZmqSubscriber.hpp
ClusterDisplay/src/: BatteryIconObj.cpp  ClusterDataSubscriber.cpp  ClusterModel.cpp  SpeedometerObj.cpp  ZmqMessageParser.cpp  ZmqSubscriber.cpp
ClusterDisplay/tests/: CMakeLists.txt  README.md
ClusterDisplay/tests/unit/: CMakeLists.txt  test_BatteryIconObj.cpp  test_ClusterDataSubscriber.cpp  test_ClusterModel.cpp  test_SpeedometerObj.cpp  test_ZmqMessageParser.cpp  test_ZmqSubscriber.cpp
ClusterDisplay/ui/: AlertsDisplay.qml  BatteryBar.qml  BatteryPercentDisplay.qml  BottomInfoBar.qml  CenterPanel.qml  CircularBatteryGauge.qml  CircularSpeedometer.qml  ClockDisplay.qml  DrivingModeIndicator.qml  JetracerAlertDisplay.qml  LaneAlertDisplay.qml  ModernBatteryBar.qml  ModernTimeDisplay.qml  NumberSpeedometer.qml  ObjectAlertDisplay.qml  OdometerDisplay.qml  StreetSignDisplay.qml  TopStatusBar.qml  VerticalBatteryBar.qml
build_tidy/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_tidy/.qt/: QtDeploySupport.cmake
build_tidy/.qt/deploy_qml_imports/: ClusterDisplay.cmake
build_tidy/.qt_plugins/: Qt6_QmlPlugins_Imports_ClusterDisplay.rsp
build_tidy/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tidy/tests/unit/: CTestTestfile.cmake  Makefile
scripts/: README.md  ci-coverage.sh  ci-format.sh  ci-summary.sh  ci-test.sh  ci-tidy.sh
